--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,23 @@
-stages:
-  - build
-  - deploy
-
-image: node:20
-cache: # Cache modules in between jobs
-  key: $CI_COMMIT_REF_SLUG
-  paths:
-    - .npm/
-
-build:
-  stage: build
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == "v4"'
+default:
+  image: node:20
   before_script:
-    - hash -r
-    - npm ci --cache .npm --prefer-offline
+    - npm install
+  cache:
+    paths:
+      - node_modules/
+
+workflow:
+  rules:
+    - if: $CI_COMMIT_BRANCH
+
+deploy-pages:
+  stage: deploy
   script:
     - npx quartz build
+  pages: true
   artifacts:
     paths:
       - public
-  tags:
-    - gitlab-org-docker
-
-pages:
-  stage: deploy
   rules:
-    - if: '$CI_COMMIT_REF_NAME == "v4"'
-  script:
-    - echo "Deploying to GitLab Pages..."
-  artifacts:
-    paths:
-      - public
+    - if: $CI_COMMIT_BRANCH == "main"
+  environment: production
