--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@main
-        with:
-          fetch-depth: 0 # Fetch all history for git info
       - uses: actions/setup-node@main
         with:
-          node-version: 22
+          node-version: 20
+          cache: 'npm'
       - name: Install Dependencies
         run: npm ci
       - name: Build Quartz
