--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "PhD",
-  "description": "My PhD journey",
+  "name": "@jackyzha0/quartz",
+  "description": "🌱 publish your digital garden and notes as a website",
   "private": true,
   "version": "4.4.0",
   "type": "module",
-  "author": "Felipe Xavier",
+  "author": "jackyzha0 <j.zhao2k19@gmail.com>",
   "license": "MIT",
-  "homepage": ".",
+  "homepage": "https://quartz.jzhao.xyz",
   "repository": {
     "type": "git",
-    "url": "https://github.com/FelipeACXavier/PhD.git"
+    "url": "https://github.com/jackyzha0/quartz.git"
   },
   "scripts": {
     "quartz": "./quartz/bootstrap-cli.mjs",
